discussion/kv_engine/136174/136174_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: MB-36572: Use CouchKVStoreFileCache for reading

@TODO benchmarks - don't expect any perf improvement, just don't want
a perf regression.

Change-Id: Ied860c427f02b75cc2c52ec58b8ff8f39a8476bd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2020-09-14 16:12:12.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-14 18:01:56.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4504/ : FAILURE

clang-tidy found the following problems:

<pre>
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/unique_ptr.h:76:16: error: invalid application of "sizeof" to an incomplete type "CouchKVFileHandle" [clang-diagnostic-error]
        static_assert(sizeof(_Tp)>0,
                      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/unique_ptr.h:268:4: note: in instantiation of member function "std::default_delete<CouchKVFileHandle>::operator()" requested here
          get_deleter()(__ptr);
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:535:12: note: in instantiation of member function "std::unique_ptr<CouchKVFileHandle, std::default_delete<CouchKVFileHandle> >::~unique_ptr" requested here
    struct OpenForReadResult {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:46:7: note: forward declaration of "CouchKVFileHandle"
class CouchKVFileHandle;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4504/ )

Compile error at /usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/unique_ptr.h:76:16:
error: invalid application of "sizeof" to an incomplete type "CouchKVFileHandle" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4504/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26303/ : FAILURE

Compile error at /usr/local/lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/unique_ptr.h:76:16:
error: invalid application of "sizeof" to an incomplete type "CouchKVFileHandle"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26303/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30404/ : FAILURE

Compile error at C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Tools\MSVC\14.16.27023\include\memory(2082): error C2027: use of undefined type "CouchKVFileHandle" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30404/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4855/ : FAILURE

Compile error at [2020-09-14T16:23:03.891Z] /Library/Developer/CommandLineTools_11.3.1/usr/bin/../include/c++/v1/memory:2335:19:
error: invalid application of "sizeof" to an incomplete type "CouchKVFileHandle"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4855/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5850/ : FAILURE

Compile error at [2020-09-14T17:14:20.218Z] /usr/local/include/c++/7.3.0/bits/unique_ptr.h:76:22:
error: invalid application of ?sizeof? to incomplete type ?CouchKVFileHandle?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5850/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5750/ : FAILURE

Compile error at [2020-09-14T17:03:54.575Z] /usr/local/include/c++/7.3.0/bits/unique_ptr.h:76:22:
error: invalid application of ?sizeof? to incomplete type ?CouchKVFileHandle?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5750/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5985/ : FAILURE

Compile error at [2020-09-14T17:19:30.566Z] /usr/bin/../lib/gcc/x86_64-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/unique_ptr.h:76:16:
error: invalid application of "sizeof" to an incomplete type "CouchKVFileHandle"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5985/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13661/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3030/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
